Reset object's position when stop button is clicked

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                 toggleButton.textContent = "Start";
                 // Stop listening to device orientation
                 stopListening();
+                // Reset object's position
+                set(ref(database, 'orientationData'), {
+                    orientation: 0
+                });
             }
         });
 
