--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 
 <body>
-    <h1>Bouncing Ball</h1>
-    <a href="controller.html">Controller</a>
-    <a href="gameplay.html">Gameplay</a>
+    <div id="container">
+        <h1>Bouncing Ball</h1>
+        <div>
+            <a href="controller.html">Controller</a>
+            <a href="gameplay.html">Gameplay</a>
+        </div>
+    </div>
 </body>
 
 </html>
