--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <h1>Bouncing Ball</h1>
-        <div>
+        <div id="links">
             <a href="controller.html">Controller</a>
             <a href="gameplay.html">Gameplay</a>
         </div>
