--- a/controller.html
+++ b/controller.html
@@ -9,16 +9,19 @@
 </head>
 
 <body>
-    <div id="object"></div>
-    <button id="start">Start</button>
+    <div id="object" style="top: 10px;"></div>
+    <div id="container">
+        <h1>Bouncing Ball</h1>
+        <p>Use the device's orientation to move the object left and right.</p>
+        <button id="start">Start</button>
+    </div>
+
 
     <script type="module">
-        // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
         import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js";
 
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        // Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyCHvwXIji75oFVqTHqTSTXN4Mrw_8Cqtg8",
             authDomain: "bouncing-ball-rw.firebaseapp.com",
@@ -29,70 +32,22 @@
             appId: "1:353355833704:web:afcd68b1b8ab1fc9d3b6dd",
             measurementId: "G-4DN6DJKY30"
         };
-        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
-        // Get a reference to the database service
         const database = getDatabase(app);
 
         const object = document.getElementById("object");
-        let screenWidth = window.innerWidth;
-        let screenHeight = window.innerHeight;
         let isActive = false;
+        const moveSpeed = 5;
 
-        // Function to center the object on both X and Y axis
+        let screenWidth = window.innerWidth;
         function centerObject() {
             const initialLeft = (screenWidth - object.offsetWidth) / 2;
-            const initialTop = (screenHeight - object.offsetHeight) / 2;
             object.style.left = `${initialLeft}px`;
-            object.style.top = `${initialTop}px`;
         }
-
-        // Initial centering of the object
         centerObject();
 
-        const toggleButton = document.getElementById("start");
-        toggleButton.addEventListener("click", function (e) {
-            e.preventDefault();
-            isActive = !isActive;
-
-            if (isActive) {
-                // Change button text to "Stop"
-                toggleButton.textContent = "Stop";
-                // Start listening to device orientation
-                startListening();
-            } else {
-                // Change button text to "Start"
-                toggleButton.textContent = "Start";
-                // Stop listening to device orientation
-                stopListening();
-                // Reset object's position
-                centerObject();
-                set(ref(database, 'orientationData'), {
-                    orientation: 0
-                });
-            }
-        });
-
-        function startListening() {
-            if (typeof DeviceOrientationEvent !== 'undefined' && typeof DeviceOrientationEvent.requestPermission === 'function') {
-                DeviceOrientationEvent.requestPermission().then(response => {
-                    if (response == 'granted') {
-                        window.addEventListener('deviceorientation', handleOrientation);
-                    }
-                }).catch(console.error);
-            } else {
-                window.addEventListener('deviceorientation', handleOrientation);
-            }
-        }
-
-        function stopListening() {
-            window.removeEventListener('deviceorientation', handleOrientation);
-        }
-
-        const moveSpeed = 5; // Speed of object movement
-
         function handleOrientation(event) {
-            if (!isActive) return; // Exit if demo is not active
+            if (!isActive) return; // Exit if not active
 
             const gamma = event.gamma; // Left-to-right tilt in degrees
 
@@ -113,6 +68,48 @@
 
             object.style.left = `${newLeft}px`;
         }
+
+        function startListening() {
+            if (typeof DeviceOrientationEvent !== 'undefined' && typeof DeviceOrientationEvent.requestPermission === 'function') {
+                DeviceOrientationEvent.requestPermission().then(response => {
+                    if (response == 'granted') {
+                        window.addEventListener('deviceorientation', handleOrientation);
+                    }
+                }).catch(console.error);
+            } else {
+                window.addEventListener('deviceorientation', handleOrientation);
+            }
+        }
+
+        function stopListening() {
+            window.removeEventListener('deviceorientation', handleOrientation);
+        }
+
+        const toggleButton = document.getElementById("start");
+        toggleButton.addEventListener("click", function (e) {
+            e.preventDefault();
+            isActive = !isActive;
+
+            if (isActive) {
+                // Change button text to "Stop"
+                toggleButton.textContent = "Stop";
+                startListening();
+            } else {
+                // Change button text to "Start"
+                toggleButton.textContent = "Start";
+                stopListening();
+                // Reset object's position
+                centerObject();
+                set(ref(database, 'orientationData'), {
+                    orientation: 0
+                });
+            }
+        });
+
+        window.addEventListener('resize', () => {
+            screenWidth = window.innerWidth;
+            centerObject();
+        });
     </script>
 </body>
 
