added scoring system

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div id="container">
         <h1>Bouncing Ball</h1>
-        <div id="links">
-            <a href="controller.html">Controller</a>
-            <a href="gameplay.html">Gameplay</a>
+        <div id="link-container">
+            <a class="link" href="controller.html">Controller</a>
+            <a class="link" href="gameplay.html">Gameplay</a>
         </div>
     </div>
 </body>
