--- a/gameplay.html
+++ b/gameplay.html
@@ -14,14 +14,14 @@
     <div id="score"></div>
 
     <div id="container">
-        <h1>Bouncing Ball</h1>
-        <p></p>
+        <p id="info"> Control the paddle with your mobile device and try stop the ball hitting the bottom!</p>
+        <h2 id="score-info"></h2>
         <button id="start">Start Game</button>
-        <label for="slider">Speed: <span id="speed"></span></label>
+        <label for="slider">Paddle Speed: <span id="speed"></span></label>
         <input type="range" min="1" max="10" value="5.5" step="0.1" id="slider">
     </div>
     <button id="stop">Stop</button>
-
+    <a href=""></a>
 
     <script type="module">
         // Firebase configuration
@@ -54,7 +54,7 @@
 
         // Update the speed value when the slider is moved
         slider.addEventListener("input", function () {
-            moveSpeed = slider.value * 2;
+            moveSpeed = slider.value * 2.5;
             speedValue.textContent = slider.value;
         });
 
@@ -71,10 +71,17 @@
         centerObject();
 
         // Set the initial score value
-        let score = 0;
+        let score = null;
         const scoreDisplay = document.getElementById("score");
+        const info = document.getElementById("info");
+        const scoreInfo = document.getElementById("score-info");
         function updateScore() {
             scoreDisplay.textContent = score;
+            if (score !== null) {
+                info.style.display = "none";
+                scoreInfo.textContent = "Score: " + score;
+                scoreInfo.style.display = "block";
+            }
         }
         updateScore();
 
@@ -220,9 +227,6 @@
             // Continue the animation loop
             animationFrameId = requestAnimationFrame(moveBall);
         }
-
-
-
     </script>
 </body>
 
