added more styling

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="container">
         <h1>Bouncing Ball</h1>
         <div id="link-container">
+            <a class="link" href="gameplay.html">Play Game</a>
             <a class="link" href="controller.html">Controller</a>
-            <a class="link" href="gameplay.html">Gameplay</a>
         </div>
     </div>
 </body>
