--- a/controller.html
+++ b/controller.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Controller</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <div id="object" style="top: 10px;"></div>
+
+    <div id="top-bar">
+        <a href="index.html" class="home"><i class="fa fa-arrow-left"></i></a>
+    </div>
     <div id="container">
-        <p>Use the device's orientation to move the object left and right.</p>
+        <p>Use the device's orientation to move the paddle left and right.</p>
         <button id="start">Start</button>
     </div>
 
