--- a/gameplay.html
+++ b/gameplay.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Game</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -13,15 +14,17 @@
     <div id="ball"></div>
     <div id="score"></div>
 
+    <div id="top-bar">
+        <a href="index.html" class="home"><i class="fa fa-arrow-left"></i></a>
+        <button id="stop">Stop</button>
+    </div>
     <div id="container">
-        <p id="info"> Control the paddle with your mobile device and try stop the ball hitting the bottom!</p>
+        <p id="info"> Link your mobile device to Control the paddle and try stop the ball hitting the bottom!</p>
         <h2 id="score-info"></h2>
         <button id="start">Start Game</button>
         <label for="slider">Paddle Speed: <span id="speed"></span></label>
         <input type="range" min="1" max="10" value="5.5" step="0.1" id="slider">
     </div>
-    <button id="stop">Stop</button>
-    <a href=""></a>
 
     <script type="module">
         // Firebase configuration
