--- a/gameplay.html
+++ b/gameplay.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="object"></div>
+    <div id="paddle"></div>
     <div id="ball"></div>
     <div id="score"></div>
 
@@ -19,218 +19,14 @@
         <button id="stop">Stop</button>
     </div>
     <div id="container">
-        <p id="info"> Link your mobile device to Control the paddle and try stop the ball hitting the bottom!</p>
+        <p id="info"> Link your mobile device to control the paddle and try stop the ball hitting the bottom!</p>
         <h2 id="score-info"></h2>
         <button id="start">Start Game</button>
-        <label for="slider">Paddle Speed: <span id="speed"></span></label>
+        <label for="slider">Paddle Speed: <span id="speed-value"></span></label>
         <input type="range" min="1" max="10" value="5.5" step="0.1" id="slider">
     </div>
 
-    <script type="module">
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyCHvwXIji75oFVqTHqTSTXN4Mrw_8Cqtg8",
-            authDomain: "bouncing-ball-rw.firebaseapp.com",
-            databaseURL: "https://bouncing-ball-rw-default-rtdb.firebaseio.com",
-            projectId: "bouncing-ball-rw",
-            storageBucket: "bouncing-ball-rw.appspot.com",
-            messagingSenderId: "353355833704",
-            appId: "1:353355833704:web:afcd68b1b8ab1fc9d3b6dd",
-            measurementId: "G-4DN6DJKY30"
-        };
-
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
-        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js";
-
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
-
-        const object = document.getElementById("object");
-        const ball = document.getElementById("ball");
-        let isActive = false;
-
-        // Set the initial speed value
-        const slider = document.getElementById("slider");
-        const speedValue = document.getElementById("speed");
-        let moveSpeed = slider.value;
-        speedValue.textContent = moveSpeed - 0.5;
-
-        // Update the speed value when the slider is moved
-        slider.addEventListener("input", function () {
-            moveSpeed = slider.value * 2.5;
-            speedValue.textContent = slider.value;
-        });
-
-        let screenWidth = window.innerWidth;
-        function centerObject() {
-            const initialLeft = (screenWidth - object.offsetWidth) / 2;
-            object.style.left = `${initialLeft}px`;
-        }
-
-        window.addEventListener('resize', () => {
-            screenWidth = window.innerWidth;
-            centerObject();
-        });
-        centerObject();
-
-        // Set the initial score value
-        let score = null;
-        const scoreDisplay = document.getElementById("score");
-        const info = document.getElementById("info");
-        const scoreInfo = document.getElementById("score-info");
-        function updateScore() {
-            scoreDisplay.textContent = score;
-            if (score !== null) {
-                info.style.display = "none";
-                scoreInfo.textContent = "Score: " + score;
-                scoreInfo.style.display = "block";
-            }
-        }
-        updateScore();
-
-
-        function handleOrientation(gamma) {
-            // Determine movement direction based on gamma value
-            let direction = gamma > 5 ? 1 : gamma < -5 ? -1 : 0;
-
-            // Update object's position at a constant speed
-            const currentLeft = parseInt(object.style.left, 10);
-            let newLeft = currentLeft + (moveSpeed * direction);
-
-            // Ensure the object remains within screen bounds
-            newLeft = Math.max(0, Math.min(screenWidth - object.offsetWidth, newLeft));
-
-            // Update object's position
-            object.style.left = `${newLeft}px`;
-        }
-
-        // Start listening to device orientation events
-        const dbRef = ref(database, 'orientationData');
-        onValue(dbRef, (snapshot) => {
-            if (!isActive) return;
-            const data = snapshot.val();
-            handleOrientation(data.orientation);
-        });
-
-        let animationFrameId = null;
-
-        const startButton = document.getElementById("start");
-        const stopButton = document.getElementById("stop");
-        const container = document.getElementById("container");
-
-        startButton.addEventListener("click", function (e) {
-            e.preventDefault();
-            isActive = !isActive;
-            score = 0;
-            updateScore();
-            container.style.display = "none";
-            stopButton.style.display = "block";
-            ball.style.display = "block";
-
-            // Cancel any existing animation frame
-            if (animationFrameId !== null) {
-                cancelAnimationFrame(animationFrameId);
-            }
-
-            startBallAnimation();
-        });
-
-        stopButton.addEventListener("click", function (e) {
-            e.preventDefault();
-            isActive = !isActive;
-            container.style.display = "flex";
-            stopButton.style.display = "none";
-            ball.style.display = "none";
-            centerObject();
-            set(ref(database, 'orientationData'), {
-                orientation: 0
-            });
-
-            // Cancel the animation frame
-            if (animationFrameId !== null) {
-                cancelAnimationFrame(animationFrameId);
-                animationFrameId = null;
-            }
-        });
-
-        let ballSpeedY = 0;
-        let ballSpeedX = 2;
-        let ballPositionX = 0;
-        let ballPositionY = 0;
-
-        function startBallAnimation() {
-            // Set initial ball speed
-            ballSpeedY = 2;
-
-            // Reset ball position
-            ballPositionX = screenWidth / 2;
-            ballPositionY = 40;
-
-            ball.style.top = `${ballPositionY}px`;
-            ball.style.left = `${ballPositionX}px`;
-
-            // Start ball animation loop
-            animationFrameId = requestAnimationFrame(moveBall);
-        }
-
-        function moveBall() {
-            ballPositionY += ballSpeedY;
-            ballPositionX += ballSpeedX;
-
-            // Check for collisions with object
-            const objectRect = object.getBoundingClientRect();
-            const ballRect = ball.getBoundingClientRect();
-            if (ballRect.left < objectRect.right && ballRect.right > objectRect.left &&
-                ballRect.top < objectRect.bottom && ballRect.bottom > objectRect.top) {
-
-                // Determine collision side and adjust horizontal direction
-                const hitPoint = ballRect.left + (ballRect.width / 2);
-                const objectMidPoint = objectRect.left + (objectRect.width / 2);
-                if (hitPoint < objectMidPoint) {
-                    // Hit the left side of the object
-                    ballSpeedX = Math.abs(ballSpeedX) * -1;
-                } else {
-                    // Hit the right side of the object
-                    ballSpeedX = Math.abs(ballSpeedX);
-                }
-
-                if (ballSpeedY > 0) {
-                    // Ball is moving downwards
-                    ballPositionY = objectRect.top - ballRect.height - 1;
-                } else {
-                    // Ball is moving upwards
-                    ballPositionY = objectRect.bottom + 1;
-                }
-
-                // Update score
-                score++;
-                updateScore();
-
-                // Reverse vertical direction and increase speed slightly
-                ballSpeedY *= -1.1;
-            }
-
-            // Check for collisions with window edges
-            if (ballPositionX <= 0 || ballPositionX >= window.innerWidth - ball.offsetWidth - 1) {
-                ballSpeedX *= -1; // Reverse horizontal direction
-            }
-            if (ballPositionY <= 40) {
-                ballSpeedY = Math.abs(ballSpeedY);
-            } else if (ballPositionY >= window.innerHeight - ball.offsetHeight - 1) {
-
-                // Game over
-                stopButton.click();
-                return;
-            }
-
-            // Update ball position
-            ball.style.top = `${ballPositionY}px`;
-            ball.style.left = `${ballPositionX}px`;
-
-            // Continue the animation loop
-            animationFrameId = requestAnimationFrame(moveBall);
-        }
-    </script>
+    <script src="gameplay.js" type="module"></script>
 </body>
 
 </html>
